--- a/index.html
+++ b/index.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css /index.css">
-    <link rel="stylesheet" href="/css /global.css">
-    <script src="/js/index.js" type="module"></script>
-    <title>ZombieGame</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width" />
+  <title>Shooter</title>
+  <link href="css/global.css" rel="stylesheet" type="text/css" />
+  <link href="css/index.css" rel="stylesheet" type="text/css" />
+  <script src="js/index.js" type="module"></script>
 </head>
 <body>
-    <div id="container">
- 
-        <canvas id="canvasGame"></canvas>
-
-    </div>
+  <div id="app">
+    <canvas id="app-scene"></canvas>
+  </div>
 </body>
 </html>
